--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -59,7 +59,8 @@
     flex-direction: row;
     flex-wrap: wrap;
     gap: 40px;
-    margin-top: 100px;
+    padding: 100px 0px;
+    /* background-color: black; */
   }
   
   /* cards css */
@@ -101,7 +102,7 @@
   /* footer css */
   
   .footer {
-    margin-top: 100px;
+    /* margin-top: 100px; */
     font-size: 15px;
     height: 100px;
     display: flex;
