--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,155 +1,182 @@
+/* Global Styles */
+* {
+  margin: 0;
+  padding: 0;
+  -webkit-tap-highlight-color: transparent;
+}
 
+body {
+  font-family: 'Open Sans';
+  background-color: #1a1a1a;
+  color: white;
+}
 
-*{
-    margin: 0;padding: 0;
-    -webkit-tap-highlight-color: transparent;
-  }
-  
-  body {
-    font-family: 'Open Sans';
-    background-color: #1a1a1a;
-    color: white;
-  }
-  
-  /* navbar css */
-  .navbar {
-    background-color: #282828;
-    height: 60px;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    gap: 5px;
-  }
-  
-  .navbar-first-container {
-    display: flex;
-    align-items: center;
-    gap: 20px;
-    justify-content: center;
-  }
-  .navbar-second-container {
-    display: flex;
-    align-items: center;
-    gap: 80px;
-    justify-content: space-around;
-  }
-  .logo {
-    font-weight: 600;
-    font-size: 20px;
-  }
-  
-  .logo-image {
-    height: 35px;
-    width: auto;
-  }
-  
-  .title {
-    font-weight: 500;
-  }
-  
-  .rule {
-    background-color: #464646;
-    height: 1px;
-    border: none;
-  }
-  
-  /* holder css */
-  .main-card-holder {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: row;
-    flex-wrap: wrap;
-    gap: 40px;
-    padding: 100px 0px;
-  }
-  
-  /* cards css */
-  .card {
-    display: block;
-    min-height: 500px;
-    width: 400px;
-    border: 1px #464646;
-    border-radius: 10px;
-    background-color: #282828;
-    box-shadow: 8px 8px 4px rgba(0, 0, 0, 0.1);
-  }
-  
-  .card-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 15px;
-    gap: 25px;
-  }
-  
-  .card-image {
-    width: 300px;
-    height: auto;
-    border-radius: 10px;
-  }
-  
-  .card-title {
-    font-weight: 500;
-    font-size: 24px;
-  }
-  
-  .card-description {
-    color: #bdbfc2;
-    font-size: 14px;
-  }
-  
-  /* footer css */
-  
-  .footer {
-    font-size: 15px;
-    height: 100px;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    background-color: #1a1a1a;
-    display: flex;
-  }
-  
-  .footer-first-container {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    gap: 20px;
-  }
-  
-  .copyright {
-    color: #999b9e;
-  }
-  
-  .divider {
-    margin: 0px 15px;
-  }
-  
-  .social-media {
-    color: #999b9e;
-  }
-  
-  .social-media a {
-    color: #999b9e;
-    text-decoration: none;
-  }
-  
-  .social-media a:hover {
-    color: #e7e7e7;
-  }
-  
-  .flag-container {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 10px;
-    color: #999b9e
-  }
-  
-  .flag-icon {
-    height: 23px;
-    width: auto;
-  }
+/* Navbar CSS */
+.navbar {
+  background-color: #282828;
+  height: 60px;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  gap: 5px;
+}
+
+.navbar-first-container,
+.navbar-second-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.navbar-first-container {
+  gap: 20px;
+}
+
+.navbar-second-container {
+  gap: 80px;
+}
+
+.logo {
+  font-weight: 600;
+  font-size: 20px;
+  cursor: pointer;
+}
+
+.logo-image {
+  height: 35px;
+  width: auto;
+  cursor: pointer;
+}
+
+.title {
+  font-weight: 500;
+  cursor: pointer;
+  position: relative;
+}
+
+.title:hover {
+  color: #fff; /* Optional: change text color on hover */
+}
+
+.title::after {
+  content: '';
+  position: absolute;
+  width: 0;
+  height: 2px;
+  background-color: white;
+  left: 0;
+  bottom: -5px; /* Adjust for spacing below the text */
+  transition: width 0.3s ease-in-out;
+}
+
+.title:hover::after {
+  width: 100%; /* Full-width line under the text on hover */
+}
+
+.rule {
+  background-color: #464646;
+  height: 1px;
+  border: none;
+}
+
+/* Holder CSS */
+.main-card-holder {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 40px;
+  padding: 100px 0px;
+}
+
+/* Cards CSS */
+.card {
+  display: block;
+  min-height: 500px;
+  width: 400px;
+  border: 1px #464646;
+  border-radius: 10px;
+  background-color: #282828;
+  box-shadow: 8px 8px 4px rgba(0, 0, 0, 0.1);
+  cursor: pointer;
+}
+
+.card-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 15px;
+  gap: 25px;
+}
+
+.card-image {
+  width: 300px;
+  height: auto;
+  border-radius: 10px;
+}
+
+.card-title {
+  font-weight: 500;
+  font-size: 24px;
+}
+
+.card-description {
+  color: #bdbfc2;
+  font-size: 14px;
+}
+
+/* Footer CSS */
+.footer {
+  font-size: 15px;
+  height: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  background-color: #1a1a1a;
+}
+
+.footer-first-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+}
+
+.copyright {
+  color: #999b9e;
+}
+
+.divider {
+  margin: 0px 15px;
+}
+
+.social-media {
+  color: #999b9e;
+}
+
+.social-media a {
+  color: #999b9e;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.social-media a:hover {
+  color: #e7e7e7;
+}
+
+.flag-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  color: #999b9e;
+}
+
+.flag-icon {
+  height: 23px;
+  width: auto;
+  cursor: pointer;
+}
